aburkut.cr8s.36307c90d63a5c6343709f19009b3fed9fc81520
Running as unit: run-p1424787-i14004923.scope; invocation ID: f571334afe814fe0ac1d9a8bfadd366f
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling libc v0.2.178
   Compiling version_check v0.9.5
    Checking cfg-if v1.0.4
    Checking memchr v2.7.6
   Compiling serde_core v1.0.228
    Checking pin-project-lite v0.2.16
   Compiling serde v1.0.228
    Checking bytes v1.11.0
    Checking futures-core v0.3.31
   Compiling zerocopy v0.8.31
    Checking itoa v1.0.15
    Checking stable_deref_trait v1.2.1
   Compiling typenum v1.19.0
   Compiling syn v2.0.111
    Checking socket2 v0.6.1
    Checking mio v1.1.1
    Checking signal-hook-registry v1.4.7
   Compiling find-msvc-tools v0.1.5
    Checking futures-sink v0.3.31
   Compiling shlex v1.3.0
   Compiling generic-array v0.14.7
   Compiling proc-macro2-diagnostics v0.10.1
   Compiling cc v1.2.49
    Checking once_cell v1.21.3
   Compiling yansi v1.0.1
    Checking smallvec v1.15.1
    Checking futures-channel v0.3.31
    Checking slab v0.4.11
    Checking futures-io v0.3.31
    Checking pin-utils v0.1.0
    Checking futures-task v0.3.31
    Checking percent-encoding v2.3.2
    Checking futures-util v0.3.31
    Checking subtle v2.6.1
   Compiling getrandom v0.3.4
    Checking crypto-common v0.1.7
    Checking block-buffer v0.10.4
    Checking ppv-lite86 v0.2.21
   Compiling httparse v1.10.1
    Checking bitflags v2.10.0
    Checking writeable v0.6.2
    Checking litemap v0.8.1
    Checking log v0.4.29
    Checking digest v0.10.7
   Compiling num-conv v0.1.0
   Compiling icu_normalizer_data v2.1.1
   Compiling time-core v0.1.6
   Compiling icu_properties_data v2.1.2
   Compiling time-macros v0.2.24
   Compiling siphasher v1.0.1
   Compiling autocfg v1.5.0
    Checking hashbrown v0.16.1
    Checking equivalent v1.0.2
   Compiling num-traits v0.2.19
   Compiling phf_shared v0.11.3
    Checking getrandom v0.2.16
   Compiling cookie v0.18.1
    Checking indexmap v2.12.1
   Compiling rand_core v0.6.4
   Compiling ref-cast v1.0.25
    Checking tinyvec_macros v0.1.1
   Compiling vcpkg v0.2.15
   Compiling pkg-config v0.3.32
   Compiling regex-syntax v0.8.8
    Checking tinyvec v1.10.0
   Compiling rand v0.8.5
    Checking rand_core v0.9.3
   Compiling openssl-sys v0.9.111
   Compiling object v0.32.2
   Compiling fnv v1.0.7
   Compiling crossbeam-utils v0.8.21
   Compiling powerfmt v0.2.0
   Compiling synstructure v0.13.2
   Compiling regex-automata v0.4.13
   Compiling parking_lot_core v0.9.12
    Checking base64 v0.22.1
    Checking cpufeatures v0.2.17
    Checking http v0.2.12
   Compiling devise_core v0.4.2
   Compiling deranged v0.5.5
   Compiling serde_derive v1.0.228
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling tokio-macros v2.6.0
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
    Checking tokio v1.48.0
   Compiling pear_codegen v0.2.9
   Compiling ref-cast-impl v1.0.25
   Compiling async-trait v0.1.89
    Checking zerofrom v0.1.6
    Checking yoke v0.8.1
    Checking zerovec v0.11.5
    Checking zerotrie v0.2.3
   Compiling ar_archive_writer v0.2.0
   Compiling regex v1.12.2
   Compiling phf_generator v0.11.3
    Checking tinystr v0.8.2
    Checking potential_utf v0.1.4
   Compiling tracing-core v0.1.35
    Checking icu_collections v2.1.1
    Checking unicode-normalization v0.1.25
    Checking icu_locale_core v2.1.1
    Checking rand_chacha v0.9.0
    Checking icu_provider v2.1.1
    Checking is-terminal v0.4.17
    Checking aho-corasick v1.1.4
    Checking icu_normalizer v2.1.1
    Checking icu_properties v2.1.2
   Compiling uncased v0.9.10
    Checking utf8_iter v1.0.4
    Checking iana-time-zone v0.1.64
    Checking scopeguard v1.2.0
    Checking unicode-bidi v0.3.18
    Checking unicode-properties v0.1.4
    Checking byteorder v1.5.0
    Checking ryu v1.0.20
   Compiling try-lock v0.2.5
   Compiling want v0.3.1
    Checking stringprep v0.1.5
    Checking chrono v0.4.42
    Checking lock_api v0.4.14
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking tracing v0.1.43
    Checking serde_spanned v0.6.9
    Checking tokio-util v0.7.17
    Checking toml_datetime v0.6.11
    Checking rand v0.9.2
   Compiling phf_codegen v0.11.3
   Compiling psm v0.1.28
   Compiling parse-zoneinfo v0.3.1
   Compiling time v0.3.44
   Compiling http-body v0.4.6
   Compiling devise_codegen v0.4.2
    Checking sha2 v0.10.9
   Compiling socket2 v0.5.10
   Compiling phf v0.11.3
    Checking hmac v0.12.1
    Checking md-5 v0.10.6
    Checking form_urlencoded v1.2.2
    Checking num_cpus v1.17.0
   Compiling ahash v0.8.12
   Compiling ucd-trie v0.1.7
    Checking winnow v0.7.14
    Checking inlinable_string v0.1.15
    Checking httpdate v1.0.3
    Checking fallible-iterator v0.2.0
   Compiling tower-service v0.3.3
   Compiling serde_json v1.0.145
    Checking toml_write v0.1.2
   Compiling rustix v1.1.2
   Compiling futures v0.3.31
    Checking postgres-protocol v0.6.9
   Compiling pear v0.2.9
   Compiling hyper v0.14.32
   Compiling pest v2.8.4
    Checking url v2.5.7
   Compiling chrono-tz-build v0.3.0
    Checking toml_edit v0.22.27
    Checking crossbeam-epoch v0.9.18
    Checking parking_lot v0.12.5
   Compiling devise v0.4.2
    Checking h2 v0.3.27
    Checking deadpool-runtime v0.1.4
   Compiling diesel_table_macro_syntax v0.1.0
    Checking rand_chacha v0.3.1
    Checking phf_shared v0.13.1
   Compiling stacker v0.1.22
   Compiling stable-pattern v0.1.0
    Checking bstr v1.12.1
   Compiling multer v3.1.0
   Compiling figment v0.10.19
   Compiling state v0.6.0
    Checking same-file v1.0.6
   Compiling libm v0.2.15
    Checking foreign-types-shared v0.1.1
    Checking utf8parse v0.2.2
   Compiling openssl v0.10.75
   Compiling either v1.15.0
    Checking linux-raw-sys v0.11.0
    Checking retain_mut v0.1.9
    Checking fastrand v2.3.0
    Checking mime v0.3.17
   Compiling rocket_http v0.5.1
    Checking deadpool v0.9.5
    Checking anstyle-parse v0.2.7
    Checking globset v0.4.18
    Checking foreign-types v0.3.2
    Checking walkdir v2.5.0
    Checking toml v0.8.23
    Checking phf v0.13.1
   Compiling pest_meta v2.8.4
   Compiling diesel_derives v2.1.4
    Checking crossbeam-deque v0.8.6
   Compiling chrono-tz v0.9.0
    Checking postgres-types v0.2.11
    Checking combine v4.6.7
   Compiling async-stream-impl v0.3.6
   Compiling openssl-macros v0.1.1
    Checking http v1.4.0
   Compiling rocket v0.5.1
    Checking encoding_rs v0.8.35
    Checking spin v0.9.8
   Compiling unicode-xid v0.2.6
    Checking colorchoice v1.0.4
    Checking anstyle v1.0.13
    Checking anstyle-query v1.1.5
    Checking allocator-api2 v0.2.21
    Checking whoami v1.6.1
   Compiling glob v0.3.3
    Checking is_terminal_polyfill v1.70.2
   Compiling native-tls v0.2.14
    Checking hashbrown v0.14.5
    Checking anstream v0.6.21
   Compiling rocket_codegen v0.5.1
    Checking tokio-postgres v0.7.15
    Checking diesel v2.1.6
    Checking async-stream v0.3.6
    Checking ignore v0.4.25
    Checking tempfile v3.23.0
   Compiling pest_generator v2.8.4
    Checking tokio-stream v0.1.17
    Checking ubyte v0.10.4
    Checking scoped-futures v0.1.4
    Checking base64ct v1.8.1
    Checking openssl-probe v0.1.6
    Checking strsim v0.11.1
    Checking clap_lex v0.7.6
    Checking deunicode v1.6.2
    Checking binascii v0.1.4
    Checking atomic v0.5.3
    Checking password-hash v0.5.0
    Checking clap_builder v4.5.53
    Checking slug v0.1.6
    Checking humansize v2.1.3
   Compiling pest_derive v2.8.4
    Checking chumsky v0.9.3
    Checking redis v0.23.3
    Checking globwalk v0.9.1
   Compiling rocket_db_pools_codegen v0.1.0
    Checking email-encoding v0.4.1
    Checking blake2 v0.10.6
    Checking hostname v0.4.2
    Checking nom v8.0.0
    Checking unicode-segmentation v1.12.0
    Checking email_address v0.2.9
    Checking lazy_static v1.5.0
    Checking quoted_printable v0.5.1
    Checking tera v1.20.1
    Checking argon2 v0.5.3
    Checking clap v4.5.53
    Checking password-hash v0.6.0-rc.6
    Checking deadpool-redis v0.12.0
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.1.6/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking lettre v0.11.19
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
